<resources>
    <string name="app_name">THU Help</string>
    <string name="main_page">主页</string>
    <string name="my_page">我的</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="student_id">学号</string>
    <string name="password">密码</string>
    <string name="nickname">昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="publish_deal">发布任务</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="bonus">奖励</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="deal_description">任务描述</string>
    <string name="deal_title">任务标题</string>
    <string name="deal_bonus">任务奖励</string>
    <string name="button_start_time">选择开始时间</string>
    <string name="button_end_time">选择结束时间</string>
    <string name="submit">提交</string>
    <string name="toast_fill_publish_message">请填写完整信息</string>
    <string name="toast_publish_time_error">结束时间必须晚于开始时间</string>
    <string name="address">地点</string>
    <string name="deal_address">任务地点</string>
    <string name="sharedPreFile_login">login</string>
    <string name="my_publish">已发布</string>
    <string name="my_accept">待完成</string>
    <string name="my_confirm">待确认</string>
    <string name="my_finish">已完成</string>
    <string name="my_nickname">未登录</string>
    <string name="balance">余额</string>
    <string name="my_balance">null</string>
    <string name="deposit">充值</string>
    <string name="cash">提现</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="phone_number">电话号码</string>
    <string name="please_login">请登录</string>
    <string name="publish_success">发布成功</string>
    <string name="get_deal_list_success">获取任务列表成功</string>
    <string name="register_fail">注册失败</string>
    <string name="publish_deal_fail">发布任务失败</string>
    <string name="login_fail">登录失败</string>
    <string name="get_deal_list_fail">获取任务列表失败</string>
    <string name="logout">退出登录</string>
    <string name="upload_avatar_success">上传头像成功</string>
    <string name="accept_deal_success">接收任务成功</string>
    <string name="accept_deal_fail">接受任务失败</string>
    <string name="delete_deal_fail">删除任务失败</string>
    <string name="delete_deal_success">删除任务成功</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="published_by_me">我发布的</string>
    <string name="published_by_others">他人发布的</string>
    <string name="finish_deal_success">完成任务成功</string>
    <string name="finish_deal_fail">完成任务失败</string>
    <string name="confirm_deal_success">确认任务成功</string>
    <string name="confirm_deal_fail">确认任务失败</string>
    <string name="giveup_deal_success">放弃任务成功</string>
    <string name="giveup_deal_fail">放弃任务失败</string>
    <string name="confirm_edit_profile">确认修改</string>
    <string name="edit_profile">修改个人信息</string>
    <string name="edit_profile_success">修改个人信息成功</string>
    <string name="edit_profile_fail">修改个人信息失败</string>
    <string name="edit_profile_hint">昵称和密码置空则不更改</string>
    <string name="private_message">私信</string>
    <string name="query_hint">请输入搜索内容</string>
    <string name="input_message_hint">输入消息</string>
    <string name="send">发送</string>
    <string name="uid">uid</string>
</resources>
